--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             text-align: center;
             width: 100%;
             height: auto;
+            border-radius: 5px;
         }
         header img{
             display: inline-block;
@@ -64,17 +65,36 @@
         }
         .section1--text span
         {
-            margin-top: 20px;
-            font-size: 1.6rem;
+            padding-top: 20px;
+            font-size: 1.8rem;
             padding-top: 10px;
             font-weight: 500;
         }
         .section1--text p
         {
-            font-size: 1.4rem;
+            font-size: 1.5rem;
             padding-top: 15px;
             font-weight: 400;
             line-height: 30px;
+            text-align: justify;
+        }
+        .section1--button
+        {
+            width: 200px;
+            height: 50px;
+            margin: 0 auto;;
+            margin-top: 30px;
+            background-color: var(--softpaq-blue);
+            border-radius: 15px;
+            text-align: center;
+        }
+        .section1--button a
+        {
+            font-weight: 600;
+            font-size: 1.80rem;
+            line-height: 45px;
+            color: white;
+            margin-top: 10px;
         }
         </style>
 </head>
@@ -86,10 +106,13 @@
         <div class="section1--text">
             <H1>Encuesta de Satisfacción</H1>
             <h2>Estimado Cliente:</h2>
-            <span>Espero que se encuentre muy bien</span> 
+            <span> <br>Espero que se encuentre muy bien</span> 
             <p>Queremos platicarte que estamos trabajando cada día con día en mejorar nuestro servicio de soporte disponible para ti, como parte de la ayuda integrada para todos los sistemas CONTPAQi® que tenemos a tu disposición,
                 en donde se resuelven todas las dudas y problemas relacionados a tus sistemas. Para esto necesitamos de tu valiosa contribución <b>realizando la siguiente encuesta.</b> 
             </p>
+        </div>
+        <div class="section1--button">
+            <a href="https://softpaqi.net/encuesta-de-satisfaccion/">Responder encuesta</a>
         </div>
     </section>
     <section></section>
