--- a/index2.html
+++ b/index2.html
@@ -37,6 +37,12 @@
             margin: 0 auto;
             padding-top: 20px;
         }
+        .section1--button
+        {
+            margin-top: 20px;
+            background-color: var(--softpaq-blue);
+            border-radius: 15px;
+        }
     </style>
 </head>
 <body>
