--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
             color: white;
             margin-top: 10px;
         }
+        .section1--stars{
+            display: flex;
+            width: 100%;
+            height: 80px;
+            margin: 30px auto;
+            justify-content: center;
+        }
+        .section1--stars img{
+            width: 60px;
+            height: 40px;
+            padding-right: 10px;
+            padding-left: 10px;
+        }
         </style>
 </head>
 <body>
@@ -114,13 +127,20 @@
         <div class="section1--button">
             <a href="https://softpaqi.net/encuesta-de-satisfaccion/">Responder encuesta</a>
         </div>
+        <div class="section1--stars">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon_stylized.svg/1077px-Star_icon_stylized.svg.png" alt="star">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon_stylized.svg/1077px-Star_icon_stylized.svg.png" alt="star">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon_stylized.svg/1077px-Star_icon_stylized.svg.png" alt="star">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon_stylized.svg/1077px-Star_icon_stylized.svg.png" alt="star">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon_stylized.svg/1077px-Star_icon_stylized.svg.png" alt="star">
+        </div>
     </section>
     <footer>
         <table cellpadding="0" cellspacing="0" class="es-footer" align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;background-color:transparent;background-repeat:repeat;background-position:center top">
             <tbody>
                 <tr style="border-collapse:collapse">
                     <td align="center" style="padding:0;Margin:0">
-                        <table class="es-footer-body" cellspacing="0" cellpadding="0" align="center" bgcolor= #055185 style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#055185;width:500px;margin-top: 60px;">
+                        <table class="es-footer-body" cellspacing="0" cellpadding="0" align="center" bgcolor= #055185 style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#055185;width:500px;margin-top: 0px;">
                             <tbody>                                
                                 <tr style="border-collapse:collapse">
                                     <td align="left" style="Margin:0;border-radius:0px;margin:0px;padding-left:20px;padding-bottom:15px;padding-top:20px;padding-right:10px">
