--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
             color: white;
             margin-top: 10px;
         }
+        .section-1--text2{
+            width: 90%;
+            height: auto;
+            margin: 0 auto;
+        }
+        .section-1--text2 p
+        {
+            font-size: 1.5rem;
+            padding-top: 15px;
+            font-weight: 400;
+            line-height: 30px;
+            text-align: justify;
+        }
         .section1--stars{
             display: flex;
             width: 100%;
@@ -119,13 +132,14 @@
         <div class="section1--text">
             <H1>Encuesta de Satisfacción</H1>
             <h2>Estimado Cliente:</h2>
-            <span> <br>Espero que se encuentre muy bien</span> 
-            <p>Queremos platicarte que estamos trabajando cada día con día en mejorar nuestro servicio de soporte disponible para ti, como parte de la ayuda integrada para todos los sistemas CONTPAQi® que tenemos a tu disposición,
-                en donde se resuelven todas las dudas y problemas relacionados a tus sistemas. Para esto necesitamos de tu valiosa contribución <b>realizando la siguiente encuesta.</b> 
+            <p>Su satisfacción es muy importante para nosotros. Es por ello que estamos trabajando día con día en mejorar nuestro servicio de soporte, pilar fundamental para que usted pueda aprovechar al máximo su(s) sistema(s) CONTPAQi®. <br>
+                Para llevar a cabo esta ardua labor, necesitamos de su valiosa contribución <b>realizando la siguiente encuesta.</b>
+                No tardará más de 5 munutos en rellenarla. Sabemos que su tiempo es muy valioso                                
             </p>
+            <p>Por su contribución, de antemano <b>¡Muchas Gracias!</b></p>
         </div>
         <div class="section1--button">
-            <a href="https://softpaqi.net/encuesta-de-satisfaccion/">Responder encuesta</a>
+            <a href="https://softpaqi.net/encuesta-de-satisfaccion/">Responder encuesta</a>            
         </div>
         <div class="section1--stars">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon_stylized.svg/1077px-Star_icon_stylized.svg.png" alt="star">
@@ -133,7 +147,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon_stylized.svg/1077px-Star_icon_stylized.svg.png" alt="star">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon_stylized.svg/1077px-Star_icon_stylized.svg.png" alt="star">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon_stylized.svg/1077px-Star_icon_stylized.svg.png" alt="star">
-        </div>
+        </div>       
     </section>
     <footer>
         <table cellpadding="0" cellspacing="0" class="es-footer" align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;background-color:transparent;background-repeat:repeat;background-position:center top">
